appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
    # clearKeychain: true
    permissions:
      all: 'allow'
- runFlow:
    file: ./close-onboarding.yaml
- tapOn:
    id: 'HeaderEnvironmentIcon'
- scrollUntilVisible:
    element:
      id: 'HomeEnvironmentSelector${ENVIRONMENT}Button'
      optional: true
- tapOn:
    id: 'HomeEnvironmentSelector${ENVIRONMENT}Button'
- waitForAnimationToEnd
- tapOn:
    id: ${MODULE}
