appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: ../shared/close-onboarding.yaml
- tapOn:
    id: 'HeaderEnvironmentIcon'
- tapOn:
    id: 'HomeEnvironmentSelectorTestButton'
- assertVisible:
    id: "HeaderNotificationHistoryButton"
    optional: true
- tapOn:
    id: 'HeaderEnvironmentIcon'
- tapOn:
    id: AdminScreenShowSurveyButton
- tapOn:
    id: SurveyRatingFormFieldIcon
    index: 4
- tapOn:
    id: SurveyTextareaFormFieldInput
- inputRandomText:
    length: 20
- runFlow:
    file: ../shared/close-keyboard.yaml
- scrollUntilVisible:
    element:
      id: DynamicFormSubmitButton
- tapOn:
    id: DynamicFormSubmitButton
- assertVisible:
    id: SurveyFeedbackFormSuccessAlert
