appId: nl.amsterdam.app.dev
---
- launchApp:
    clearState: true
- runFlow:
    file: ../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Test
      MODULE: HomeContactModuleButton
- scrollUntilVisible:
    element:
      id: .*SurveyQuestion.*
- tapOn:
    id: SurveySelectionButtonsFormField
- scrollUntilVisible:
    element:
      id: DynamicFormSubmitButton
- tapOn:
    id: SurveyTextareaFormFieldInput
- inputRandomText:
    length: 20
- runFlow:
    file: ../shared/close-keyboard.yaml
- tapOn:
    id: DynamicFormSubmitButton
- assertVisible:
    id: SurveyFeedbackFormSuccessAlert
