appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeWasteGuideModuleButton
- tapOn:
    id: WasteGuideAddressSwitch
- runFlow:
    label: Enter address
    file: '../../shared/EnterAddress.yaml'
    env:
      ADDRESS: Omval 18
      BAGID: '0363200000468752'
      ID: WasteGuide
      SAVEASMYADDRESS: Yes

- runFlow:
    label: Restafval
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: Rest
      HOW: In afvalzak
      DAY: Maandag
      OUTSIDE: Tussen 06.00 en 07.00 uur
      WHERE: Aan de rand van de stoep of op de vaste plek
- runFlow:
    label: Grofafval
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: GA
      HOW: Appointment
      DAY: ''
      OUTSIDE: ''
      WHERE: ''
- runFlow:
    label: Papier en karton
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: Papier
      HOW: In de container voor papier
      DAY: ''
      OUTSIDE: ''
      WHERE: ''
- runFlow:
    label: GFE/t
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: GFT
      HOW: Bij het restafval
      DAY: ''
      OUTSIDE: ''
      WHERE: ''
- runFlow:
    label: Glas
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: Glas
      HOW: In de container voor glas
      DAY: ''
      OUTSIDE: ''
      WHERE: ''
- runFlow:
    label: Textiel
    file: '../utils/VerifyFraction.yaml'
    env:
      FRACTION: Textiel
      HOW: In de container voor textiel
      DAY: ''
      OUTSIDE: ''
      WHERE: ''

- tapOn:
    id: WasteGuideWasteGuideCalendarButton
- tapOn:
    id: WasteFractionIconCalendarButton
    index: 0
- assertVisible:
    text: Restafval
- tapOn:
    id: HeaderBackIcon
- tapOn:
    text: Toon ophaaldagen als lijst
- assertVisible:
    text: Toon ophaaldagen als kalender
- tapOn:
    text: Restafval
    index: 0
- assertVisible:
    text: Restafval
- tapOn:
    id: HeaderBackIcon
- tapOn:
    text: Toon ophaaldagen als kalender
- assertVisible:
    text: Toon ophaaldagen als lijst
- tapOn:
    id: WasteGuideCalendarHeaderMenuButton
- assertVisible:
    id: WasteGuideDownloadAsPdfButton
