appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app-without-permissions.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeWasteGuideModuleButton
- assertVisible:
    id: WasteGuideAddressSwitchNoAddressTitle
- assertVisible:
    id: WasteGuideAddressSwitchNoAddressText
- assertVisible:
    id: WasteGuideAddressSwitchChooseAddressButton

# Meer opties
# Meld een afvalprobleem
- scrollUntilVisible:
    element:
      id: WasteGuideReportWasteProblemButton
- tapOn:
    id: WasteGuideReportWasteProblemButton
- tapOn:
    text: 'Sta toe|Allow|While using the app'
    optional: true
- assertVisible:
    id: ReportProblemWebViewScreen
- tapOn:
    id: HeaderBackIcon
- tapOn:
    text: Verlaat en verwijder antwoorden

# Recyclepunten
- runFlow:
    file: ../utils/RecyclingPoints.yaml

# Alles over afval
- scrollUntilVisible:
    element:
      id: WasteGuideInformationButton
- assertVisible:
    id: WasteGuideInformationTitle
- runFlow:
    file: ../../shared/handle-external-link-button.yaml
    env:
      ID: WasteGuideInformationButton
