appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeWasteGuideModuleButton
- tapOn:
    id: WasteGuideAddressSwitch
- runFlow:
    label: Enter address
    file: '../../shared/EnterAddress.yaml'
    env:
      ADDRESS: Cruquiusweg 5
      BAGID: '0363200000406068'
      ID: WasteGuide
      SAVEASMYADDRESS: Yes

- scrollUntilVisible:
    element:
      id: WasteGuideNotificationSwitchSwitch
- tapOn:
    text: '.* staat uit'
    id: WasteGuideNotificationSwitchSwitch
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- tapOn:
    text: '.* staat aan'
    id: WasteGuideNotificationSwitchSwitch
- assertVisible:
    text: '.* staat uit'
    id: WasteGuideNotificationSwitchSwitch
