appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../../shared/open-module-from-fresh-app.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeWasteGuideModuleButton
- tapOn:
    id: WasteGuideAddressSwitch
- runFlow:
    label: Enter address
    file: '../../shared/EnterAddress.yaml'
    env:
      ADDRESS: Ellermanstraat 3A, Amsterdam-Duivendrecht
      BAGID: '0437200000001743'
      ID: WasteGuide
      SAVEASMYADDRESS: No
- assertVisible:
    id: WasteGuideAddressOutsideAmsterdamTitle
- assertVisible:
    id: WasteGuideNotFoundMistakeButton
