appId: nl.amsterdam.app.dev
---
- scrollUntilVisible:
    element:
      id: WasteGuideRecyclingButton
- tapOn:
    id: WasteGuideRecyclingButton
- assertVisible:
    text: Nieuw-West, Henk Sneevlietweg 22 1066 VH Amsterdam
- assertVisible:
    text: Maandag, dinsdag, woensdag, donderdag, vrijdag en zaterdag van 08.00 tot 17.00 uur
- assertVisible:
    text: Zondag van 10.00 tot 16.00 uur
- tapOn:
    id: WasteGuideRecyclePointsSeeMapButton
- assertVisible:
    text: Henk Sneevlietweg
- assertVisible:
    id: WasteGuideRecyclePointMapExternalLinkButton
- tapOn:
    id: HeaderBackIcon
- tapOn:
    id: RecyclePointTopTaskButton
- tapOn:
    id: RecyclePoint2Button
- assertVisible:
    text: Oost, Rozenburglaan 1 1097 HK Amsterdam
- assertVisible:
    text: Maandag, dinsdag, woensdag, donderdag, vrijdag en zaterdag van 08.00 tot 17.00 uur
- assertNotVisible:
    id: WasteGuideRecyclePointsVisitingHoursList1ItemText
- tapOn:
    id: WasteGuideRecyclePointsSeeMapButton
- assertVisible:
    text: Rozenburglaan
- assertVisible:
    id: WasteGuideRecyclePointMapExternalLinkButton
- tapOn:
    id: HeaderBackIcon
- tapOn:
    id: HeaderBackIcon
