appId: nl.amsterdam.app.dev
---
- runFlow:
    file: ../shared/OpenModuleFromFreshApp.yaml
    env:
      ENVIRONMENT: Acceptance
      MODULE: HomeWasteGuideModuleButton
- tapOn:
    id: WasteGuideAddressAddressSwitch
- runFlow:
    label: Enter address
    file: '../shared/EnterAddress.yaml'
    env:
      ADDRESS: Cruquiusweg 5
      ID: WasteGuideAddress
      SAVEASMYADDRESS: Yes

- scrollUntilVisible:
    element:
      id: WasteGuideNotificationSwitchSwitch
- tapOn:
    text: '.* staat uit'
    id: WasteGuideNotificationSwitchSwitch
- tapOn:
    text: 'Sta toe|Allow'
    optional: true
- tapOn:
    text: '.* staat aan'
    id: WasteGuideNotificationSwitchSwitch
- assertVisible:
    text: '.* staat uit'
    id: WasteGuideNotificationSwitchSwitch
